semi-final prot

--- a/Prot 1 func/agree.html
+++ b/Prot 1 func/agree.html
@@ -29,7 +29,7 @@
 		  		<div class="col-md-3">
 		  			<div class="row">
 		  				<div class="col-md-12 box" id="maintittle">
-		  					<h1 class= "width act maintext">Mensagens<br> <small>Confirmação</small></h1>
+		  					<h1 class= "width act maintext">Confirmação</h1>
 		  				</div>
 		  			</div>
 		  			<div class="row top-buffer">
@@ -58,15 +58,15 @@
 		  		</div>
 		  		<div class="col-md-9">
 		  			<div class="row">
-		  				<div class="col-md-5 col-md-offset-1 box smallpadding" id="helper">
+		  				<div class="col-md-5 col-md-offset-1 box smallpadding noheight" id="helper">
 		  					<h4 class="maintext width act" id="helperfunc">Seleccione a opção de confirmação desejada</h4>
 		  				</div>
 		  			</div>
 		  			<div class="row top-buffer-main">
 		  				<div class="col-md-5 col-md-offset-7 box smallpadding" id="mainwindow">
 		  					<div class="width act" id="maintext">
-		  						<h4> Mensagem: </h4>
-		  						<p><bold>Tem a certeza que quer enviar esta mensagem?</bold></p>
+		  						<!-- <h4> Mensagem: </h4>
+		  						<p><bold>Tem a certeza que quer enviar esta mensagem?</bold></p> -->
 		  					</div>
 		  				</div>
 		  			</div>
