--- a/Prot 1 func/avaria.html
+++ b/Prot 1 func/avaria.html
@@ -44,10 +44,13 @@
 						    		<a class="nav-button"><span class="mainicon glyphicon glyphicon-info-sign"></span></a>
 						    	</li >
 							    <li class="left-menu usestore2" data-msg="Sugestão" data-help="Consulte a sugestão de reparação apresentada para a avaria em causa">
-							    	<a class="nav-button"><span class="mainicon glyphicon glyphicon-question-sign"></span></a>
+							    	<a class="nav-button"><span class="mainicon glyphicon glyphicon-book"></span></a>
 							    </li>
 								<li class="left-menu" data-msg="Menu principal" data-help="Voltar ao menu principal" data-txt="">
 									<a class="nav-button" href="index.html"><span class="mainicon glyphicon glyphicon-home"></span></a>
+								</li>
+								<li id="help" class="left-menu" data-msg="Ajuda" data-help="Consulte as várias opções para obter ajuda. Pode desactivar a ajuda seleccionando esta opção novamente" data-txt="">
+									<a class="nav-button"><span class="mainicon glyphicon glyphicon-question-sign"></span></a>
 								</li>
 						    </nav>
 						</div>
@@ -62,13 +65,16 @@
 								<li class="noact width">
 									<blockquote class=" side mainicon glyphicon glyphicon-ok-circle"></blockquote>
 								</li>
+								<li class="noact width">
+									<blockquote class=" side mainicon glyphicon glyphicon-ok-circle"></blockquote>
+								</li>
 							</ul>
 						</div>
 		  			</div>
 		  		</div>
 		  		<div class="col-md-9">
 		  			<div class="row">
-		  				<div class="col-md-5 col-md-offset-1 box smallpadding" id="helper">
+		  				<div class="col-md-5 col-md-offset-1 box smallpadding noheight" id="helper">
 		  					<h4 class="maintext width act" id="helperfunc"></h4>
 		  				</div>
 		  			</div>
