--- a/Prot 1 func/login.html
+++ b/Prot 1 func/login.html
@@ -24,7 +24,7 @@
     <![endif]-->
   </head>
   <body>
-  	<div class="background">
+  	<div class="background backinit">
   		<div class="container-fluid">
 		  	<div class="row">
 		  		<div class="col-md-9 col-md-offset-3">
