--- a/Prot 1 func/personalizacao.html
+++ b/Prot 1 func/personalizacao.html
@@ -89,7 +89,7 @@
 		  		</div>
 		  		<div class="col-md-9">
 		  			<div class="row">
-		  				<div class="col-md-5 col-md-offset-1 box smallpadding" id="helper">
+		  				<div class="col-md-5 col-md-offset-1 box smallpadding noheight" id="helper">
 		  					<h4 class="maintext width act" id="helperfunc"></h4>
 		  				</div>
 		  			</div>
