--- a/Prot 1 func/index.html
+++ b/Prot 1 func/index.html
@@ -10,6 +10,7 @@
 	<script src="js/bootstrap.min.js"></script>
 	<script src="js/keypress-2.0.1.min.js"></script>
 	<script src="js/navbar.js"></script>
+	<script> sessionStorage.msgAct = ""</script>
 
     <!-- Bootstrap -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -43,22 +44,29 @@
 		  					<div class="roll-scroll">
 							    <nav class="nav nav-pills nav-stacked nav-fixed-left nav-inverse text-center" role="navigation">
 							    	<li class="left-menu" data-msg="Calendário" data-help="Ver o calendário, consultar tarefas e marcações agendadas" data-txt="">
-								  		<a class="nav-button" href="#"><span class="mainicon glyphicon glyphicon-calendar"></span></a>
+								  		<a class="nav-button"><span class="mainicon glyphicon glyphicon-calendar"></span></a>
 								  	</li>
 							    	<li class="left-menu" data-msg="Câmaras" data-help="Ver, tirar fotos e muito mais usando as câmaras dos passageiros" data-txt="">
 								  		<a class="nav-button" href="camara.html"><span class="mainicon glyphicon glyphicon-camera"></span></a>
 								  	</li>
 								  	<li class="left-menu" data-msg="Compras" data-help="Compre e reserve produtos com entrega ao domicílio" data-txt="">
-								  		<a class="nav-button" href="#"><span class="mainicon glyphicon glyphicon-shopping-cart"></span></a>
+								  		<a class="nav-button"><span class="mainicon glyphicon glyphicon-shopping-cart"></span></a>
 								  	</li>
 								  	<li class="left-menu" data-msg="GPS" data-help="Seguir rotas, encontrar pontos de interesse, pesquisar moradas e muito mais" data-txt="">
-								  		<a class="nav-button" href="#"><span class="mainicon glyphicon glyphicon-globe"></span></a>
+								  		<a class="nav-button"><span class="mainicon glyphicon glyphicon-globe"></span></a>
 								  	</li>
 								    <li class="left-menu" data-msg="Mensagens" data-help="Enviar e ver mensagens recebidas de outros utilizadores" data-txt="" style="opacity: 0; height: 0px">
 								      	<a id="bottom-elem" class="nav-button" href="mensagens.html"><span class="mainicon glyphicon glyphicon-envelope"></span></a>
 								    </li>
 								  	<li class="left-menu" data-msg="Personalização/ Avarias" data-help="Personalizar o seu carro e verificar as avarias registadas" data-txt="" style="opacity: 0; height: 0px">
 								  		<a class="nav-button" href="avpersona.html"><span class="mainicon glyphicon glyphicon-cog"></span><span class="glyphicon glyphicon-cog"></span></a>
+								  	</li>
+								  	<li id="help" class="left-menu" data-msg="Ajuda" data-help="Consulte as várias opções para obter ajuda. Pode desactivar a ajuda seleccionando esta opção novamente" data-txt="" style="opacity: 0; height: 0px">
+										<a class="nav-button"><span class="mainicon glyphicon glyphicon-question-sign"></span></a>
+									</li>
+									<li class="left-menu store-confirm" data-msg="Sair" data-help="Sair do Kitt e entrar com outro utilizador" data-txt=""
+									data-confirm="Sair do Kitt?" style="opacity: 0; height: 0">
+								  		<a class="nav-button" href="agree.html"><span class="mainicon glyphicon glyphicon-off"></span></a>
 								  	</li>
 							    </nav>
 							</div>
@@ -87,7 +95,7 @@
 		  		</div>
 		  		<div class="col-md-9">
 		  			<div class="row">
-		  				<div class="col-md-5 col-md-offset-1 box smallpadding" id="helper">
+		  				<div class="col-md-5 col-md-offset-1 box smallpadding noheight" id="helper">
 		  					<h4 class="maintext width act" id="helperfunc"></h4>
 		  				</div>
 		  			</div>
