--- a/Prot 1 func/piropos.html
+++ b/Prot 1 func/piropos.html
@@ -38,30 +38,34 @@
 			  			</div>
 		  			</div>
 		  			<div class="row">
-		  				<div id="sidebar" class="col-md-8 box smallpadding">
-						    <nav class="nav nav-pills nav-stacked nav-fixed-left text-center" role="navigation">
-						    	<li class="left-menu store" data-msg="Mensagem: 1 / 4" data-help="Mensagem pré-definida de piropo - 1" data-txt="<h4> Mensagem: </h4><p>Epah, pareces um helicóptero... Gira e boa!</p><p>Sizenante Fonseca</p><p>24/03/2230</p>">
-						    		<a class="nav-button" href="selectuser.html"><span class="mainicon glyphicon glyphicon-envelope"></span><span class="mainicon"> 1</span></a>
-						    	</li>
-						    	<li class="left-menu store" data-msg="Mensagem: 2 / 4" data-help="Mensagem pré-definida de piropo - 2" data-txt="<h4> Mensagem: </h4><p>Oh jóia! Anda cá ao ourives!</p><p>Sizenante Fonseca</p><p>24/03/2230</p>">
-						    		<a class="nav-button" href="selectuser.html"><span class="mainicon glyphicon glyphicon-envelope"></span><span class="mainicon"> 2</span></a>
-						    	</li>
-						    	<li class="left-menu store" data-msg="Mensagem: 3 / 4" data-help="Mensagem pré-definida de piropo - 3" data-txt="<h4> Mensagem: </h4><p>Tu aí cheia de curvas e eu aqui sem travões.</p><p>Sizenante Fonseca</p><p>24/03/2230</p>">
-						    		<a class="nav-button" href="selectuser.html"><span class="mainicon glyphicon glyphicon-envelope"></span><span class="mainicon"> 3</span></a>
-						    	</li>
-						    	<li class="left-menu store" data-msg="Mensagem: 4 / 4" data-help="Mensagem pré-definida de piropo - 4" data-txt="<h4> Mensagem: </h4><p>Acreditas em amor à primeira vista ou tenho que passar por aqui mais uma vez?</p><p>Sizenante Fonseca</p><p>24/03/2230</p>">
-						    		<a class="nav-button" href="selectuser.html"><span class="mainicon glyphicon glyphicon-envelope"></span><span class="mainicon"> 4</span></a>
-						    	</li>
-								<li class="left-menu" data-msg="Menu principal" data-help="Voltar ao menu principal" data-txt="">
-									<a class="nav-button" href="index.html"><span class="mainicon glyphicon glyphicon-home"></span></a>
-								</li>
-						    </nav>
+		  				<div id="sidebar" class="col-md-8 box smallpadding " style="height: 300px">
+		  					<div id="top-arrow" class="arrows"><span class="glyphicon glyphicon-chevron-up scrollicon"></span></div>
+		  					<div class="roll-scroll">
+							    <nav class="nav nav-pills nav-stacked nav-fixed-left text-center" role="navigation">
+							    	<li class="left-menu store" data-msg="Mensagem: 1 / 4" data-help="Mensagem pré-definida de piropo - 1" data-txt="<h4> Mensagem: </h4><p>Epah, pareces um helicóptero... Gira e boa!</p><p>Sizenante Fonseca</p><p>24/03/2230</p>">
+							    		<a class="nav-button" href="selectuser.html"><span class="mainicon glyphicon glyphicon-envelope"></span><span class="mainicon"> 1</span></a>
+							    	</li>
+							    	<li class="left-menu store" data-msg="Mensagem: 2 / 4" data-help="Mensagem pré-definida de piropo - 2" data-txt="<h4> Mensagem: </h4><p>Oh jóia! Anda cá ao ourives!</p><p>Sizenante Fonseca</p><p>24/03/2230</p>">
+							    		<a class="nav-button" href="selectuser.html"><span class="mainicon glyphicon glyphicon-envelope"></span><span class="mainicon"> 2</span></a>
+							    	</li>
+							    	<li class="left-menu store" data-msg="Mensagem: 3 / 4" data-help="Mensagem pré-definida de piropo - 3" data-txt="<h4> Mensagem: </h4><p>Tu aí cheia de curvas e eu aqui sem travões.</p><p>Sizenante Fonseca</p><p>24/03/2230</p>">
+							    		<a class="nav-button" href="selectuser.html"><span class="mainicon glyphicon glyphicon-envelope"></span><span class="mainicon"> 3</span></a>
+							    	</li>
+							    	<li class="left-menu store" data-msg="Mensagem: 4 / 4" data-help="Mensagem pré-definida de piropo - 4" data-txt="<h4> Mensagem: </h4><p>Acreditas em amor à primeira vista ou tenho que passar por aqui mais uma vez?</p><p>Sizenante Fonseca</p><p>24/03/2230</p>">
+							    		<a class="nav-button" href="selectuser.html"><span class="mainicon glyphicon glyphicon-envelope"></span><span class="mainicon"> 4</span></a>
+							    	</li>
+									<li class="left-menu" data-msg="Menu principal" data-help="Voltar ao menu principal" data-txt="" style="opacity: 0; height: 0px">
+										<a id="bottom-elem" class="nav-button" href="index.html"><span class="mainicon glyphicon glyphicon-home"></span></a>
+									</li>
+									<li id="help" class="left-menu" data-msg="Ajuda" data-help="Consulte as várias opções para obter ajuda. Pode desactivar a ajuda seleccionando esta opção novamente" data-txt="" style="opacity: 0; height: 0px">
+										<a class="nav-button"><span class="mainicon glyphicon glyphicon-question-sign"></span></a>
+									</li>
+							    </nav>
+						    </div>
+		  					<div id="bottom-arrow" class="arrows"><span class="glyphicon glyphicon-chevron-down scrollicon"></span></div>
 						</div>
-						<div class="col-md-4 padding2">
+						<div class="col-md-4 padding2 top-buffer20">
 							<ul class="nav nav-pills nav-stacked nav-fixed-left text-left">
-								<li class="noact width">
-									<blockquote class=" side mainicon glyphicon glyphicon-ok-circle"></blockquote>
-								</li>
 								<li class="noact width">
 									<blockquote class=" side mainicon glyphicon glyphicon-ok-circle"></blockquote>
 								</li>
@@ -80,7 +84,7 @@
 		  		</div>
 		  		<div class="col-md-9">
 		  			<div class="row">
-		  				<div class="col-md-5 col-md-offset-1 box smallpadding" id="helper">
+		  				<div class="col-md-5 col-md-offset-1 box smallpadding noheight" id="helper">
 		  					<h4 class="maintext width act" id="helperfunc"></h4>
 		  				</div>
 		  			</div>
