--- a/Prot 1 func/recebida.html
+++ b/Prot 1 func/recebida.html
@@ -38,33 +38,34 @@
 			  			</div>
 		  			</div>
 		  			<div class="row">
-		  				<div id="sidebar" class="col-md-8 box smallpadding">
-						    <nav class="nav nav-pills nav-stacked nav-fixed-left text-center" role="navigation">
-						    	<li class="left-menu usestore" data-msg="Responder" data-help="Responder a esta mensagem usando uma das resposta pré-definidas">
-									<a class="nav-button" href="resposta.html"><span class="mainicon glyphicon glyphicon-upload"></span></a>
-								</li>
-						   		<li class="left-menu usestore" data-msg="Marcar como /"por ler/"" data-help="Marcar a mensagem recebida como por ler" data-confirm="Marcar como /"por ler/"?">
-							    	<a class="nav-button" href="agree.html"><span class="mainicon glyphicon glyphicon-align-justify"></span></a>
-							    </li>
-								<li class="left-menu usestore" data-msg="Marcar como /"lida/"" data-help="Marcar a mensagem recebida como lida" data-confirm="Marcar como /"lida/"?">
-									<a class="nav-button" href="agree.html"><span class="mainicon glyphicon glyphicon-check"></span></a>
-								</li>
-								<li class="left-menu usestore" data-msg="Apagar" data-help="Apagar a mensagem da caixa de entrada" data-confirm="Apagar a mensagem?">
-									<a class="nav-button" href="agree.html"><span class="mainicon glyphicon glyphicon-trash"></span></a>
-								</li>
-								<li class="left-menu" data-msg="Menu principal" data-help="Voltar ao menu principal" data-txt="">
-									<a class="nav-button" href="index.html"><span class="mainicon glyphicon glyphicon-home"></span></a>
-								</li>
-						    </nav>
+		  				<div id="sidebar" class="col-md-8 box smallpadding" style="height: 300px">
+		  					<div id="top-arrow" class="arrows"><span class="glyphicon glyphicon-chevron-up scrollicon"></span></div>
+		  					<div class="roll-scroll">
+							    <nav class="nav nav-pills nav-stacked nav-fixed-left text-center" role="navigation">
+							    	<li class="left-menu usestore" data-msg="Responder" data-help="Responder a esta mensagem usando uma das resposta pré-definidas">
+										<a class="nav-button" href="resposta.html"><span class="mainicon glyphicon glyphicon-upload"></span></a>
+									</li>
+							   		<li class="left-menu usestore" data-msg="Marcar como /"por ler/"" data-help="Marcar a mensagem recebida como por ler" data-confirm="Marcar como /"por ler/"?">
+								    	<a class="nav-button" href="agree.html"><span class="mainicon glyphicon glyphicon-align-justify"></span></a>
+								    </li>
+									<li class="left-menu usestore" data-msg="Marcar como /"lida/"" data-help="Marcar a mensagem recebida como lida" data-confirm="Marcar como /"lida/"?">
+										<a class="nav-button" href="agree.html"><span class="mainicon glyphicon glyphicon-check"></span></a>
+									</li>
+									<li class="left-menu usestore" data-msg="Apagar" data-help="Apagar a mensagem da caixa de entrada" data-confirm="Apagar a mensagem?">
+										<a class="nav-button" href="agree.html"><span class="mainicon glyphicon glyphicon-trash"></span></a>
+									</li>
+									<li class="left-menu" data-msg="Menu principal" data-help="Voltar ao menu principal" data-txt="" style="opacity: 0; height: 0px">
+										<a id="bottom-elem" class="nav-button" href="index.html"><span class="mainicon glyphicon glyphicon-home"></span></a>
+									</li>
+									<li id="help" class="left-menu" data-msg="Ajuda" data-help="Consulte as várias opções para obter ajuda. Pode desactivar a ajuda seleccionando esta opção novamente" data-txt="" style="opacity: 0; height: 0px">
+										<a class="nav-button"><span class="mainicon glyphicon glyphicon-question-sign"></span></a>
+									</li>
+							    </nav>
+							</div>
+							<div id="bottom-arrow" class="arrows"><span class="glyphicon glyphicon-chevron-down scrollicon"></span></div>
 						</div>
-						<div class="col-md-4 padding2">
+						<div class="col-md-4 padding2 top-buffer20">
 							<ul class="nav nav-pills nav-stacked nav-fixed-left text-left">
-								<li class="noact width">
-									<blockquote class=" side mainicon glyphicon glyphicon-ok-circle"></blockquote>
-								</li>
-								<li class="noact width">
-									<blockquote class=" side mainicon glyphicon glyphicon-ok-circle"></blockquote>
-								</li>
 								<li class="noact width">
 									<blockquote class=" side mainicon glyphicon glyphicon-ok-circle"></blockquote>
 								</li>
@@ -83,7 +84,7 @@
 		  		</div>
 		  		<div class="col-md-9">
 		  			<div class="row">
-		  				<div class="col-md-5 col-md-offset-1 box smallpadding" id="helper">
+		  				<div class="col-md-5 col-md-offset-1 box smallpadding noheight" id="helper">
 		  					<h4 class="maintext width act" id="helperfunc"></h4>
 		  				</div>
 		  			</div>
