--- a/Prot 1 func/suspension.html
+++ b/Prot 1 func/suspension.html
@@ -38,23 +38,30 @@
 			  			</div>
 		  			</div>
 		  			<div class="row">
-		  				<div id="sidebar" class="col-md-8 box smallpadding">
-	  						<nav class="nav nav-pills nav-stacked nav-fixed-left text-center" role="navigation">
-						    	<li class="left-menu store-persona persona" data-msg="Rebaixado" data-help="Altere a sua suspensão para uma suspensão baixa" data-txt="#suspension">
-						    		<a class="nav-button" href="agree.html"><div class="icon" style="background-image: url(./imgs/icons/tinyspring.png)"></div></a>
-						    	</li >
-							    <li class="left-menu store-persona persona" data-msg="Normal" data-help="Altere a sua suspensão para uma suspensão normal, opção por defeito" data-txt="#suspension">
-							    	<a class="nav-button" href="agree.html"><div class="icon" style="background-image: url(./imgs/icons/normalspring.png)"></div></a>
-							    </li>
-								<li class="left-menu store-persona persona" data-msg="Alta" data-help="Altere a sua suspensão para uma suspensão alta" data-txt="#suspension">
-									<a class="nav-button" href="agree.html"><div class="icon" style="background-image: url(./imgs/icons/bigspring.png)"></div></a>
-								</li>
-								<li class="left-menu" data-msg="Menu principal" data-help="Voltar ao menu principal" data-txt="">
-									<a class="nav-button" href="index.html"><span class="mainicon glyphicon glyphicon-home"></span></a>
-								</li>
-						    </nav>
+		  				<div id="sidebar" class="col-md-8 box smallpadding" style="height: 360px">
+		  					<div id="top-arrow" class="arrows"><span class="glyphicon glyphicon-chevron-up scrollicon"></span></div>
+		  					<div class="roll-scroll">
+		  						<nav class="nav nav-pills nav-stacked nav-fixed-left text-center" role="navigation">
+							    	<li class="left-menu store-persona persona" data-msg="Rebaixado" data-help="Altere a sua suspensão para uma suspensão baixa" data-txt="#suspension">
+							    		<a class="nav-button" href="agree.html"><div class="icon" style="background-image: url(./imgs/icons/tinyspring.png)"></div></a>
+							    	</li >
+								    <li class="left-menu store-persona persona" data-msg="Normal" data-help="Altere a sua suspensão para uma suspensão normal, opção por defeito" data-txt="#suspension">
+								    	<a class="nav-button" href="agree.html"><div class="icon" style="background-image: url(./imgs/icons/normalspring.png)"></div></a>
+								    </li>
+									<li class="left-menu store-persona persona" data-msg="Alta" data-help="Altere a sua suspensão para uma suspensão alta" data-txt="#suspension">
+										<a class="nav-button" href="agree.html"><div class="icon" style="background-image: url(./imgs/icons/bigspring.png)"></div></a>
+									</li>
+									<li class="left-menu" data-msg="Menu principal" data-help="Voltar ao menu principal" data-txt="">
+										<a class="nav-button" href="index.html"><span class="mainicon glyphicon glyphicon-home"></span></a>
+									</li>
+									<li id="help" class="left-menu" data-msg="Ajuda" data-help="Consulte as várias opções para obter ajuda. Pode desactivar a ajuda seleccionando esta opção novamente" data-txt="" style="opacity: 0; height: 0px">
+										<a id="bottom-elem" class="nav-button"><span class="mainicon glyphicon glyphicon-question-sign"></span></a>
+									</li>
+							    </nav>
+						    </div>
+							<div id="bottom-arrow" class="arrows"><span class="glyphicon glyphicon-chevron-down scrollicon"></span></div>
 						</div>
-						<div class="col-md-4 padding2">
+						<div class="col-md-4 padding2 top-buffer20">
 							<ul class="nav nav-pills nav-stacked nav-fixed-left text-left">
 								<li class="noact width">
 									<blockquote class=" side mainicon glyphicon glyphicon-ok-circle"></blockquote>
@@ -74,7 +81,7 @@
 		  		</div>
 		  		<div class="col-md-9">
 		  			<div class="row">
-		  				<div class="col-md-5 col-md-offset-1 box smallpadding" id="helper">
+		  				<div class="col-md-5 col-md-offset-1 box smallpadding noheight" id="helper">
 		  					<h4 class="maintext width act" id="helperfunc"></h4>
 		  				</div>
 		  			</div>
