--- a/Prot 1 func/zoom.html
+++ b/Prot 1 func/zoom.html
@@ -29,7 +29,7 @@
 		  		<div class="col-md-3">
 		  			<div class="row">
 		  				<div class="col-md-12 box" id="maintittle">
-		  					<h1 class= "width act maintext">Câmaras<br> <small>Câmara activa</small></h1>
+		  					<h1 class= "width act maintext">Câmaras<br> <small>Ampliar</small></h1>
 		  				</div>
 		  			</div>
 		  			<div class="row top-buffer">
@@ -42,14 +42,14 @@
 		  					<div id="top-arrow" class="arrows"><span class="glyphicon glyphicon-chevron-up scrollicon"></span></div>
 		  					<div class="roll-scroll">
 							    <nav class="nav nav-pills nav-stacked nav-fixed-left nav-inverse text-center" role="navigation">
-							    	<li class="left-menu usestore" data-msg="Fotografar" data-help="Tirar uma fotografia da câmara activa">
-								      	<a class="nav-button" href="#"><span class="mainicon glyphicon glyphicon-camera"></span></a>
+							    	<li id="zoom-in" class="left-menu usestore" data-msg="Ampliar" data-help="Aproximar a câmara ao centro da imagem">
+								      	<a class="nav-button" href="#"><span class="mainicon glyphicon glyphicon-zoom-in"></span></a>
 								    </li>
-								  	<li class="left-menu usestore" data-msg="Gravar" data-help="Gravar um vídeo da câmara activa">
-								  		<a class="nav-button" href="#"><span class="mainicon glyphicon glyphicon-facetime-video"></span></a>
+								  	<li id="zoom-out" class="left-menu usestore" data-msg="Diminuir ampliação" data-help="Diminuir a aproximação da câmara ao centro da imagem">
+								  		<a class="nav-button" href="#"><span class="mainicon glyphicon glyphicon-zoom-out"></span></a>
 								  	</li>
-								  	<li class="left-menu usestore" data-msg="Ampliar" data-help="Ampliar a imagem da câmara activa">
-								  		<a class="nav-button" href="zoom.html"><span class="mainicon glyphicon glyphicon-search"></span></a>
+								  	<li id="zoom" class="left-menu usestore" data-msg="Ampliação normal" data-help="Repor a ampliação da câmara para o valor normal">
+								  		<a class="nav-button" href="#"><span class="mainicon glyphicon glyphicon-search"></span></a>
 								  	</li>
 								  	<li class="left-menu" data-msg="Menu principal" data-help="Voltar ao menu principal" data-txt="">
 										<a class="nav-button" href="index.html"><span class="mainicon glyphicon glyphicon-home"></span></a>
