--- a/Prot 1 func/avarias.html
+++ b/Prot 1 func/avarias.html
@@ -64,7 +64,7 @@
 									<a class="nav-button" href="index.html"><span class="mainicon glyphicon glyphicon-home"></span></a>
 								</li>
 								<li class="left-menu" data-msg="Ajuda" data-help="Consulte as várias opções para obter ajuda. Pode desactivar a ajuda seleccionando esta opção novamente" data-txt="">
-									<a id="bottom-elem" class="nav-button"><span class="mainicon glyphicon glyphicon-question-sign"></span></a>
+									<a class="nav-button"><span class="mainicon glyphicon glyphicon-question-sign"></span></a>
 								</li>
 						    </nav>
 						</div>
