--- a/Prot 1 func/galeria.html
+++ b/Prot 1 func/galeria.html
@@ -43,13 +43,13 @@
 		  					<div class="roll-scroll">
 							    <nav class="nav nav-pills nav-stacked nav-fixed-left nav-inverse text-center" role="navigation">
 							    	<li class="left-menu store" data-msg="Foto 1" data-help="Seleccionar imagem / vídeo para mais opções.<br>Data: 24/03/2230" data-txt="<img class='img' src='./imgs/cam/gal/pic1.jpg' style='margin:0'>">
-								      	<a class="nav-button" href="#"><div class="icon" style="background-image: url(./imgs/cam/gal/pic1.jpg)"></div></a>
+								      	<a class="nav-button" href="photo.html"><div class="icon" style="background-image: url(./imgs/cam/gal/pic1.jpg)"></div></a>
 								    </li>
 								  	<li class="left-menu store" data-msg="Foto 2" data-help="Seleccionar imagem / vídeo para mais opções.<br>Data: 23/02/2230" data-txt="<img class='img' src='./imgs/cam/gal/pic2.jpg' style='margin:0'>">
-								  		<a class="nav-button" href="#"><div class="icon" style="background-image: url(./imgs/cam/gal/pic2.jpg)"></div></a>
+								  		<a class="nav-button" href="photo.html"><div class="icon" style="background-image: url(./imgs/cam/gal/pic2.jpg)"></div></a>
 								  	</li>
 								  	<li class="left-menu store" data-msg="Foto 3" data-help="Seleccionar imagem / vídeo para mais opções.<br>Data: 10/02/2230" data-txt="<img class='img' src='./imgs/cam/gal/pic3.jpg' style='margin:0'>">
-								  		<a class="nav-button" href="#"><div class="icon" style="background-image: url(./imgs/cam/gal/pic3.jpg)"></div></a>
+								  		<a class="nav-button" href="photo.html"><div class="icon" style="background-image: url(./imgs/cam/gal/pic3.jpg)"></div></a>
 								  	</li>
 								  	<li class="left-menu store" data-msg="Video 1" data-help="Seleccionar imagem / vídeo para mais opções.<br>Data: 10/02/2230" data-txt="<video id='video' style='height: 100%; width:90%;'><source src='./videos/kid.mp4' type='video/mp4'>Your browser does not support the video tag.</video>">
 								  		<a class="nav-button" href="video.html">
