--- a/Prot 1 func/selectcams.html
+++ b/Prot 1 func/selectcams.html
@@ -42,13 +42,13 @@
 		  					<div id="top-arrow" class="arrows"><span class="glyphicon glyphicon-chevron-up scrollicon"></span></div>
 		  					<div class="roll-scroll">
 							    <nav class="nav nav-pills nav-stacked nav-fixed-left nav-inverse text-center" role="navigation">
-							    	<li class="left-menu store" data-msg="Câmara 1" data-help="Seleccionar câmara 1 para câmara activa" data-txt="<img class='img' src='./imgs/cam/kid1.gif'>">
+							    	<li class="left-menu store" data-msg="Câmara 1" data-help="Seleccionar câmara 1 para câmara activa" data-txt="<div class='img' style='background-image: url(./imgs/cam/kid1.gif)'></div>">
 								      	<a class="nav-button" href="activecam.html"><span class="mainicon glyphicon glyphicon-camera"></span><span class="mainicon"> 1</span></a>
 								    </li>
-								  	<li class="left-menu store" data-msg="Câmara 2" data-help="Seleccionar câmara 2 para câmara activa" data-txt="<img class='img' src='./imgs/cam/kid2.gif'>">
+								  	<li class="left-menu store" data-msg="Câmara 2" data-help="Seleccionar câmara 2 para câmara activa" data-txt="<div class='img' style='background-image: url(./imgs/cam/kid2.gif)'></div>">
 								  		<a class="nav-button" href="activecam.html"><span class="mainicon glyphicon glyphicon-camera"></span><span class="mainicon"> 2</span></a>
 								  	</li>
-								  	<li class="left-menu store" data-msg="Câmara 3" data-help="Seleccionar câmara 3 para câmara activa" data-txt="<img class='img' src='./imgs/cam/kid4.gif'>">
+								  	<li class="left-menu store" data-msg="Câmara 3" data-help="Seleccionar câmara 3 para câmara activa" data-txt="<div class='img' style='background-image: url(./imgs/cam/kid4.gif)'></div>">
 								  		<a class="nav-button" href="activecam.html"><span class="mainicon glyphicon glyphicon-camera"></span><span class="mainicon"> 3</span></a>
 								  	</li>
 								  	<li class="left-menu" data-msg="Menu principal" data-help="Voltar ao menu principal" data-txt="">
