--- a/Prot 1 func/selectuser.html
+++ b/Prot 1 func/selectuser.html
@@ -30,18 +30,18 @@
 		  		<div class="col-md-3">
 		  			<div class="row">
 		  				<div class="col-md-12 box" id="maintittle">
-		  					<h1 class= "width act maintext">Mensagens<br> <small>Utilizador</small></h1>
+		  					<h1 class= "width act maintext">Mensagens<br> <small>Destinatário</small></h1>
 		  				</div>
 		  			</div>
 		  			<div class="row top-buffer">
 		  				<div class="col-md-1 box" id="tittle">
-			  				<h3 class= "width act maintext" id="headerfunc">Utilizador: 1 / 1</h3>
+			  				<h3 class= "width act maintext" id="headerfunc">Destinatário: 1 / 1</h3>
 			  			</div>
 		  			</div>
 		  			<div class="row">
 		  				<div id="sidebar" class="col-md-8 box smallpadding">
 						    <nav class="nav nav-pills nav-stacked nav-fixed-left text-center" role="navigation">
-						    	<li class="left-menu" data-msg="Utilizador: 1 / 1" data-help="Utilizador Seleccionado - 1" data-txt="<h4> Utilizador: </h4><p>Gilberto Fradique</p><p>XX-KK-00</p>">
+						    	<li class="left-menu" data-msg="Destinatário: 1 / 1" data-help="Destinatário Seleccionado - 1" data-txt="<h4> Destinatário: </h4><p>Gilberto Fradique</p><p>XX-KK-00</p>">
 						    		<a class="nav-button" href="agree.html"><span class="mainicon glyphicon glyphicon-user"></span></a>
 						    	</li>
 								<li class="left-menu" data-msg="Menu principal" data-help="Voltar ao menu principal" data-txt="">
