--- a/Prot 1 func/video.html
+++ b/Prot 1 func/video.html
@@ -48,11 +48,11 @@
 								  	<li id="stop" class="left-menu usestore" data-msg="Parar" data-help="Parar a reprodução e voltar ao início">
 								  		<a class="nav-button"><span class="mainicon glyphicon glyphicon-stop"></span></a>
 								  	</li>
-								  	<li class="left-menu usestore" data-msg="Partilhar" data-help="Partilhar o vídeo na nuvem Kitt">
-								  		<a class="nav-button" href="#"><span class="mainicon glyphicon glyphicon-cloud"></span></a>
+								  	<li class="left-menu usestore store-confirm" data-msg="Partilhar" data-help="Partilhar o vídeo na nuvem Kitt" data-confirm="Partilhar vídeo?">
+								  		<a class="nav-button" href="agree.html"><span class="mainicon glyphicon glyphicon-cloud"></span></a>
 								  	</li>
-								  	<li class="left-menu usestore" data-msg="Apagar" data-help="Apagar o vídeo da galeria">
-								  		<a class="nav-button" href="#"><span class="mainicon glyphicon glyphicon-trash"></span></a>
+								  	<li class="left-menu usestore store-confirm" data-msg="Apagar" data-help="Apagar o vídeo da galeria" data-confirm="Apagar vídeo?">
+								  		<a class="nav-button" href="agree.html"><span class="mainicon glyphicon glyphicon-trash"></span></a>
 								  	</li>
 								  	<li class="left-menu usestore" data-msg="Menu principal" data-help="Voltar ao menu principal" data-txt="" style="opacity: 0; height: 0">
 										<a id="bottom-elem" class="nav-button" href="index.html"><span class="mainicon glyphicon glyphicon-home"></span></a>
