--- a/Prot 1 func/videoex.html
+++ b/Prot 1 func/videoex.html
@@ -29,7 +29,7 @@
 		  		<div class="col-md-3">
 		  			<div class="row">
 		  				<div class="col-md-12 box" id="maintittle">
-		  					<h1 class= "width act maintext">Câmaras<br> <small>Câmara activa</small></h1>
+		  					<h1 class= "width act maintext">Câmaras<br> <small>Vídeo</small></h1>
 		  				</div>
 		  			</div>
 		  			<div class="row top-buffer">
@@ -42,20 +42,23 @@
 		  					<div id="top-arrow" class="arrows"><span class="glyphicon glyphicon-chevron-up scrollicon"></span></div>
 		  					<div class="roll-scroll">
 							    <nav class="nav nav-pills nav-stacked nav-fixed-left nav-inverse text-center" role="navigation">
-							    	<li id="photo" class="left-menu usestore" data-msg="Fotografar" data-help="Tirar uma fotografia da câmara activa">
-								      	<a class="nav-button"><span class="mainicon glyphicon glyphicon-camera"></span></a>
+							    	<li id="rec" class="left-menu usestore" data-msg="Gravar" data-help="Iniciar a gravação">
+								      	<a class="nav-button"><span id="alter" class="mainicon glyphicon glyphicon-record"></span></a>
 								    </li>
-								  	<li class="left-menu usestore" data-msg="Gravar" data-help="Gravar um vídeo da câmara activa">
-								  		<a class="nav-button" href="videoex.html"><span class="mainicon glyphicon glyphicon-facetime-video"></span></a>
+								  	<li class="left-menu usestore store-confirm" data-msg="Partilhar" data-help="Partilhar o vídeo na nuvem Kitt" data-confirm="Partilhar vídeo?">
+								  		<a class="nav-button" href="agree.html"><span class="mainicon glyphicon glyphicon-cloud"></span></a>
 								  	</li>
-								  	<li class="left-menu usestore" data-msg="Ampliar" data-help="Ampliar a imagem da câmara activa">
-								  		<a class="nav-button" href="zoom.html"><span class="mainicon glyphicon glyphicon-search"></span></a>
+								  	<li class="left-menu usestore store-confirm" data-msg="Guardar vídeo" data-help="Guardar o vídeo na galeria de fotos e vídeos" data-confirm="Guardar vídeo?">
+								  		<a class="nav-button" href="agree.html"><span class="mainicon glyphicon glyphicon-floppy-disk"></span></a>
 								  	</li>
-								  	<li class="left-menu" data-msg="Menu principal" data-help="Voltar ao menu principal" data-txt="">
-										<a class="nav-button" href="index.html"><span class="mainicon glyphicon glyphicon-home"></span></a>
+								  	<li class="left-menu usestore store-confirm" data-msg="Apagar" data-help="Apagar o vídeo da galeria" data-confirm="Apagar vídeo?">
+								  		<a class="nav-button" href="agree.html"><span class="mainicon glyphicon glyphicon-trash"></span></a>
+								  	</li>
+								  	<li class="left-menu usestore" data-msg="Menu principal" data-help="Voltar ao menu principal" data-txt="" style="opacity: 0; height: 0">
+										<a id="bottom-elem" class="nav-button" href="index.html"><span class="mainicon glyphicon glyphicon-home"></span></a>
 									</li>
 									<li id="help" class="left-menu" data-msg="Ajuda" data-help="Consulte as várias opções para obter ajuda. Pode desactivar a ajuda seleccionando esta opção novamente" data-txt="" style="opacity: 0; height: 0px">
-										<a id="bottom-elem" class="nav-button"><span class="mainicon glyphicon glyphicon-question-sign"></span></a>
+										<a class="nav-button"><span class="mainicon glyphicon glyphicon-question-sign"></span></a>
 									</li>
 							    </nav>
 						    </div>
@@ -75,19 +78,21 @@
 								<li class="noact width">
 									<blockquote class=" side mainicon glyphicon glyphicon-ok-circle"></blockquote>
 								</li>
-							</ul>
+							</ul>..
 						</div>
 		  			</div>
 		  		</div>
 		  		<div class="col-md-9">
 		  			<div class="row">
 		  				<div class="col-md-5 col-md-offset-1 box smallpadding noheight" id="helper">
-		  					<h4 class="maintext width noact" id="helperfunc"></h4>
+		  					<h4 class="maintext width act" id="helperfunc"></h4>
 		  				</div>
 		  			</div>
 		  			<div class="row top-buffer-main">
 		  				<div class="col-md-5 col-md-offset-7 box smallpadding" id="mainwindow">
-		  					<div class="width act" id="maintext">
+		  					<span class="glyphicon glyphicon-record mainicon rec" style="color: red; margin-left: 350px; visibility: hidden"></span>
+		  					<span class="rec" style="color:red; margin-left: 350px; visibility: hidden">REC</span>
+		  					<div class="width act" id="maintext" style="margin-top: -65px">
 		  					</div>
 		  				</div>
 		  			</div>
