--- a/Prot 1 func/index.html
+++ b/Prot 1 func/index.html
@@ -65,7 +65,7 @@
 										<a class="nav-button"><span class="mainicon glyphicon glyphicon-question-sign"></span></a>
 									</li>
 									<li class="left-menu store-confirm" data-msg="Sair" data-help="Sair do Kitt e entrar com outro utilizador" data-txt=""
-									data-confirm="Sair do Kitt?" style="opacity: 0; height: 0">
+									data-confirm="Sair do Kitt?" data-backconf="login.html" style="opacity: 0; height: 0">
 								  		<a class="nav-button" href="agree.html"><span class="mainicon glyphicon glyphicon-off"></span></a>
 								  	</li>
 							    </nav>
