--- a/Prot 1 func/performance.html
+++ b/Prot 1 func/performance.html
@@ -11,6 +11,7 @@
 	<script src="js/keypress-2.0.1.min.js"></script>
 	<script src="js/navbar.js"></script>
 	<script> sessionStorage.areaPersona = "performance" </script>
+	<script> sessionStorage.backURL = "persona.html"</script>
     <!-- Bootstrap -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
