--- a/Prot 1 func/recebida.html
+++ b/Prot 1 func/recebida.html
@@ -10,6 +10,7 @@
 	<script src="js/bootstrap.min.js"></script>
 	<script src="js/keypress-2.0.1.min.js"></script>
 	<script src="js/navbar.js"></script>
+	<script> sessionStorage.backURL = "entrada.html"</script>
 
     <!-- Bootstrap -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -45,13 +46,13 @@
 							    	<li class="left-menu usestore" data-msg="Responder" data-help="Responder a esta mensagem usando uma das resposta pré-definidas">
 										<a class="nav-button" href="resposta.html"><span class="mainicon glyphicon glyphicon-upload"></span></a>
 									</li>
-							   		<li class="left-menu usestore store-confirm" data-msg="Marcar como por ler"por ler/"" data-help="Marcar a mensagem recebida como por ler" data-confirm="Marcar como por ler?">
+							   		<li class="left-menu usestore store-confirm" data-msg="Marcar como por ler"por ler/"" data-help="Marcar a mensagem recebida como por ler" data-confirm="Marcar como por ler?" data-backconf="entrada.html">
 								    	<a class="nav-button" href="agree.html"><span class="mainicon glyphicon glyphicon-align-justify"></span></a>
 								    </li>
-									<li class="left-menu usestore store-confirm" data-msg="Marcar como lida"lida/"" data-help="Marcar a mensagem recebida como lida" data-confirm="Marcar como lida?">
+									<li class="left-menu usestore store-confirm" data-msg="Marcar como lida"lida/"" data-help="Marcar a mensagem recebida como lida" data-confirm="Marcar como lida?" data-backconf="entrada.html">
 										<a class="nav-button" href="agree.html"><span class="mainicon glyphicon glyphicon-check"></span></a>
 									</li>
-									<li class="left-menu usestore store-confirm" data-msg="Apagar" data-help="Apagar a mensagem da caixa de entrada" data-confirm="Apagar a mensagem?">
+									<li class="left-menu usestore store-confirm" data-msg="Apagar" data-help="Apagar a mensagem da caixa de entrada" data-confirm="Apagar a mensagem?" data-backconf="entrada.html">
 										<a class="nav-button" href="agree.html"><span class="mainicon glyphicon glyphicon-trash"></span></a>
 									</li>
 									<li class="left-menu" data-msg="Menu principal" data-help="Voltar ao menu principal" data-txt="" style="opacity: 0; height: 0px">
