--- a/Prot 1 func/selectuser.html
+++ b/Prot 1 func/selectuser.html
@@ -11,6 +11,7 @@
 	<script src="js/keypress-2.0.1.min.js"></script>
 	<script src="js/navbar.js"></script>
 	<script> sessionStorage.confirm = "Enviar mensagem?"</script>
+	<script> sessionStorage.backURL = undefined</script>
 
     <!-- Bootstrap -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -41,7 +42,7 @@
 		  			<div class="row">
 		  				<div id="sidebar" class="col-md-8 box smallpadding">
 						    <nav class="nav nav-pills nav-stacked nav-fixed-left text-center" role="navigation">
-						    	<li class="left-menu" data-msg="Destinatário: 1 / 1" data-help="Destinatário Seleccionado - 1" data-txt="<h4> Destinatário: </h4><p>Gilberto Fradique</p><p>XX-KK-00</p>">
+						    	<li class="left-menu store-confirm" data-msg="Destinatário: 1 / 1" data-help="Destinatário Seleccionado - 1" data-txt="<h4> Destinatário: </h4><p>Gilberto Fradique</p><p>XX-KK-00</p>" data-confirm="Enviar mensagem?" data-backconf="mensagens.html">
 						    		<a class="nav-button" href="agree.html"><span class="mainicon glyphicon glyphicon-user"></span></a>
 						    	</li>
 								<li class="left-menu" data-msg="Menu principal" data-help="Voltar ao menu principal" data-txt="">
