--- a/Prot 1 func/video.html
+++ b/Prot 1 func/video.html
@@ -10,6 +10,7 @@
 	<script src="js/bootstrap.min.js"></script>
 	<script src="js/keypress-2.0.1.min.js"></script>
 	<script src="js/navbar.js"></script>
+	<script> sessionStorage.backURL = "galeria.html"</script>
 
     <!-- Bootstrap -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -48,10 +49,10 @@
 								  	<li id="stop" class="left-menu usestore" data-msg="Parar" data-help="Parar a reprodução e voltar ao início">
 								  		<a class="nav-button"><span class="mainicon glyphicon glyphicon-stop"></span></a>
 								  	</li>
-								  	<li class="left-menu usestore store-confirm" data-msg="Partilhar" data-help="Partilhar o vídeo na nuvem Kitt" data-confirm="Partilhar vídeo?">
+								  	<li class="left-menu usestore store-confirm" data-msg="Partilhar" data-help="Partilhar o vídeo na nuvem Kitt" data-confirm="Partilhar vídeo?" data-backconf="video.html">
 								  		<a class="nav-button" href="agree.html"><span class="mainicon glyphicon glyphicon-cloud"></span></a>
 								  	</li>
-								  	<li class="left-menu usestore store-confirm" data-msg="Apagar" data-help="Apagar o vídeo da galeria" data-confirm="Apagar vídeo?">
+								  	<li class="left-menu usestore store-confirm" data-msg="Apagar" data-help="Apagar o vídeo da galeria" data-confirm="Apagar vídeo?" data-backconf="galeria.html">
 								  		<a class="nav-button" href="agree.html"><span class="mainicon glyphicon glyphicon-trash"></span></a>
 								  	</li>
 								  	<li class="left-menu usestore" data-msg="Menu principal" data-help="Voltar ao menu principal" data-txt="" style="opacity: 0; height: 0">
