--- a/Prot 1 func/zoom.html
+++ b/Prot 1 func/zoom.html
@@ -10,6 +10,7 @@
 	<script src="js/bootstrap.min.js"></script>
 	<script src="js/keypress-2.0.1.min.js"></script>
 	<script src="js/navbar.js"></script>
+	<script> sessionStorage.backURL = "activecam.html"</script>
 
     <!-- Bootstrap -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -29,7 +30,7 @@
 		  		<div class="col-md-3">
 		  			<div class="row">
 		  				<div class="col-md-12 box" id="maintittle">
-		  					<h1 class= "width act maintext">Câmaras<br> <small>Ampliar</small></h1>
+		  					<h1 class= "width act maintext">Câmaras<br> <small>Ampliação</small></h1>
 		  				</div>
 		  			</div>
 		  			<div class="row top-buffer">
