--- a/Prot 1 func/conforto.html
+++ b/Prot 1 func/conforto.html
@@ -11,6 +11,7 @@
 	<script src="js/keypress-2.0.1.min.js"></script>
 	<script src="js/navbar.js"></script>
 	<script> sessionStorage.areaPersona = "confort" </script>
+	<script> sessionStorage.backURL = "persona.html"</script>
 
     <!-- Bootstrap -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
