--- a/Prot 1 func/photo.html
+++ b/Prot 1 func/photo.html
@@ -10,6 +10,7 @@
 	<script src="js/bootstrap.min.js"></script>
 	<script src="js/keypress-2.0.1.min.js"></script>
 	<script src="js/navbar.js"></script>
+	<script> sessionStorage.backURL = "galeria.html"</script>
 
     <!-- Bootstrap -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -40,10 +41,10 @@
 		  			<div class="row">
 		  				<div id="sidebar" class="col-md-8 box smallpadding">
 						    <nav class="nav nav-pills nav-stacked nav-fixed-left nav-inverse text-center" role="navigation">
-							  	<li class="left-menu usestore store-confirm" data-msg="Partilhar" data-help="Partilhar a foto na nuvem Kitt" data-confirm="Partilhar foto?">
+							  	<li class="left-menu usestore store-confirm" data-msg="Partilhar" data-help="Partilhar a foto na nuvem Kitt" data-confirm="Partilhar foto?" data-backconf="photo.html">
 							  		<a class="nav-button" href="agree.html"><span class="mainicon glyphicon glyphicon-cloud"></span></a>
 							  	</li>
-							  	<li class="left-menu usestore store-confirm" data-msg="Apagar" data-help="Apagar a foto da galeria" data-confirm="Apagar foto?">
+							  	<li class="left-menu usestore store-confirm" data-msg="Apagar" data-help="Apagar a foto da galeria" data-confirm="Apagar foto?" data-backconf="galeria.html">
 							  		<a class="nav-button" href="agree.html"><span class="mainicon glyphicon glyphicon-trash"></span></a>
 							  	</li>
 							  	<li class="left-menu" data-msg="Menu principal" data-help="Voltar ao menu principal" data-txt="">
