--- a/Prot 1 func/resposta.html
+++ b/Prot 1 func/resposta.html
@@ -11,6 +11,7 @@
 	<script src="js/keypress-2.0.1.min.js"></script>
 	<script src="js/navbar.js"></script>
 	<script> sessionStorage.confirm = "Enviar resposta?"</script>
+	<script> sessionStorage.backURL = "recebida.html"</script>
 
     <!-- Bootstrap -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
