--- a/Prot 1 func/videoex.html
+++ b/Prot 1 func/videoex.html
@@ -10,6 +10,7 @@
 	<script src="js/bootstrap.min.js"></script>
 	<script src="js/keypress-2.0.1.min.js"></script>
 	<script src="js/navbar.js"></script>
+	<script> sessionStorage.backURL = "activecam.html"</script>
 
     <!-- Bootstrap -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -45,19 +46,19 @@
 							    	<li id="rec" class="left-menu usestore" data-msg="Gravar" data-help="Iniciar a gravação">
 								      	<a class="nav-button"><span id="alter" class="mainicon glyphicon glyphicon-record"></span></a>
 								    </li>
-								  	<li class="left-menu usestore store-confirm" data-msg="Partilhar" data-help="Partilhar o vídeo na nuvem Kitt" data-confirm="Partilhar vídeo?">
+								  	<li class="left-menu usestore store-confirm" data-msg="Partilhar" data-help="Partilhar o vídeo na nuvem Kitt" data-confirm="Partilhar vídeo?" data-backconf="videoex.html">
 								  		<a class="nav-button" href="agree.html"><span class="mainicon glyphicon glyphicon-cloud"></span></a>
 								  	</li>
-								  	<li class="left-menu usestore store-confirm" data-msg="Guardar vídeo" data-help="Guardar o vídeo na galeria de fotos e vídeos" data-confirm="Guardar vídeo?">
+								  	<li class="left-menu usestore store-confirm" data-msg="Guardar vídeo" data-help="Guardar o vídeo na galeria de fotos e vídeos" data-confirm="Guardar vídeo?" data-backconf="activecam.html">
 								  		<a class="nav-button" href="agree.html"><span class="mainicon glyphicon glyphicon-floppy-disk"></span></a>
 								  	</li>
-								  	<li class="left-menu usestore store-confirm" data-msg="Apagar" data-help="Apagar o vídeo da galeria" data-confirm="Apagar vídeo?">
+								  	<li class="left-menu usestore store-confirm" data-msg="Apagar" data-help="Apagar o vídeo da galeria" data-confirm="Apagar vídeo?" data-backconf="activecam.html">
 								  		<a class="nav-button" href="agree.html"><span class="mainicon glyphicon glyphicon-trash"></span></a>
 								  	</li>
-								  	<li class="left-menu usestore" data-msg="Menu principal" data-help="Voltar ao menu principal" data-txt="" style="opacity: 0; height: 0">
-										<a id="bottom-elem" class="nav-button" href="index.html"><span class="mainicon glyphicon glyphicon-home"></span></a>
+								  	<li class="left-menu usestore store-confirm" data-msg="Menu principal" data-help="Voltar ao menu principal" data-confirm="Sair sem guardar?" data-backconf="index.html" data-txt="" style="opacity: 0; height: 0">
+										<a id="bottom-elem" class="nav-button" href="agree.html"><span class="mainicon glyphicon glyphicon-home"></span></a>
 									</li>
-									<li id="help" class="left-menu" data-msg="Ajuda" data-help="Consulte as várias opções para obter ajuda. Pode desactivar a ajuda seleccionando esta opção novamente" data-txt="" style="opacity: 0; height: 0px">
+									<li id="help" class="left-menu usestore" data-msg="Ajuda" data-help="Consulte as várias opções para obter ajuda. Pode desactivar a ajuda seleccionando esta opção novamente" data-txt="" style="opacity: 0; height: 0px">
 										<a class="nav-button"><span class="mainicon glyphicon glyphicon-question-sign"></span></a>
 									</li>
 							    </nav>
